# solana-stablecoin-standard

./: .gitignore  Anchor.toml  README.md  docker-compose.yml  index.html
backend/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
backend/src/: index.ts
backend/src/services/: compliance.service.ts  indexer.service.ts  mint-burn.service.ts  webhook.service.ts
backend/src/utils/: logger.ts
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  OPERATIONS.md  SDK.md  SSS-1.md  SSS-2.md
programs/sss_forge/: Cargo.toml
programs/sss_forge/src/: errors.rs  lib.rs  state.rs
programs/sss_forge/src/instructions/: blacklist.rs  initialize_config.rs  initialize_sss1.rs  initialize_sss2.rs  mod.rs  seize.rs  transfer_hook.rs  update_config.rs
sdk/: package-lock.json  package.json  tsconfig.json
sdk/src/: cli.ts  index.ts
src/: App.tsx  index.css
src/components/: AdminTUI.tsx  ComplianceDesk.tsx  Dashboard.tsx  MintBurn.tsx
src/data/: mockData.ts
src/hooks/: useTheme.ts
tests/: sss_forge.ts
