[package]
name = "sss-forge"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_forge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token_2022", "token-2022", "metadata"] }
spl-token-2022 = "3.0.4"
spl-transfer-hook-interface = "0.6.4"
spl-token-metadata-interface = "0.3.4"
spl-tlv-account-resolution = "0.6.4"
spl-pod = "0.2.2"
solana-program = "~1.18.0"
